--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
   <base-config cleartextTrafficPermitted="true">
     <trust-anchors>
       <!-- Include any additional certificates or CA certificates here if required -->
+      <certificates src="system" />  <!-- for Firebase -->
     </trust-anchors>
   </base-config>
 </network-security-config>
